# examples

./: .gitignore  .pre-commit-config.yaml  README.md  requirements.txt
ab_test_example/: README.md  agent_v0.py  agent_v1.py  otel_data_load_and_augment.ipynb  simulate_usage.py
adk_calculator_otel_direct/: README.md  agent.py  requirements.txt  simulate_usage.py
adk_calculator_sdk_from_json/: README.md  adk_calc_data_load_and_augment.ipynb  adk_calc_data_load_only.ipynb  agent.py  dbnl_semconv_file_exporter.py  requirements.txt  simulate_usage.py
adk_calculator_sdk_from_otel/: README.md  agent.py  dbnl_otel_converter.py  otel-collector-config.yaml  otel_data_load_and_augment.ipynb  otel_data_load_only.ipynb  otel_data_two_week_sim.ipynb  simulate_usage.py
adk_calculator_tutorial/: README.md  agent.py  (+3 more)
nemo_agent_toolkit_hpo_example/: README.md  data_augment_helpers.py  dbnl_upload.ipynb  nat_otel_converter.py  pyproject.toml
nemo_agent_toolkit_hpo_example/configs/: config_v0.yaml  config_v1.yaml  eval_config_v0_full.yaml  eval_config_v0_small_only.yaml  eval_config_v1_full.yaml  optimize_config.yaml
nemo_agent_toolkit_hpo_example/data/: eval_dataset.json  eval_dataset_full.json  eval_dataset_small_numbers_only.json  prod_data_v0_8days.json  prod_data_v1_8days.json
nemo_agent_toolkit_hpo_example/scripts/: run_batch.py
nemo_agent_toolkit_hpo_example/src/nat_calculator/: __init__.py  agent.py  evaluator.py  register.py  tools.py
nemo_agent_toolkit_hpo_example/src/nat_calculator.egg-info/: SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
(+21 files in other folders)
